--- a/web/package.json
+++ b/web/package.json
@@ -13,6 +13,7 @@
     "@monaco-editor/react": "^4.6.0",
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-slot": "^1.0.2",
     "@tanstack/react-query": "^5.17.0",
     "class-variance-authority": "^0.7.0",
