--- a/env.example
+++ b/env.example
@@ -12,7 +12,7 @@ GITHUB_CLIENT_SECRET=your_github_client_secret
 JWT_SECRET=your_random_jwt_secret_here
 
 # Base URL (the public URL where your app is hosted)
-BASE_URL=https://your-domain.com
+AUTH_BASE_URL=https://your-domain.com
 
 # Authentication (set to false to disable auth - not recommended for public deployments)
 AUTH_ENABLED=true
