--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -55,7 +55,9 @@ jobs:
         with:
           context: .
           file: ./Dockerfile.unified
-          platforms: linux/amd64,linux/arm64
+          # Only arm64 for Raspberry Pi (remove linux/amd64 if you don't need x86)
+          # Building arm64 with CGO on amd64 is slow (~10-20 min) due to QEMU
+          platforms: linux/arm64
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
