--- a/Dockerfile.unified
+++ b/Dockerfile.unified
@@ -44,11 +44,11 @@ RUN CGO_ENABLED=1 GOOS=linux GOARCH=${TARGETARCH} go build -a -installsuffix cgo
 # Stage 3: Production Image
 FROM alpine:latest
 
-# Install runtime dependencies
-RUN apk add --no-cache sqlite ca-certificates tzdata
+# Install runtime dependencies (including Docker CLI and Compose plugin)
+RUN apk add --no-cache sqlite ca-certificates tzdata docker-cli docker-cli-compose
 
-# Create non-root user
-RUN addgroup -S selfhostly && adduser -S selfhostly -G selfhostly
+# Create non-root user with fixed UID/GID (1000) for predictable permissions
+RUN addgroup -g 1000 -S selfhostly && adduser -u 1000 -S selfhostly -G selfhostly
 
 WORKDIR /app
 
