--- a/env.example
+++ b/env.example
@@ -3,19 +3,23 @@
 # Copy this file to .env and fill in your values
 # =============================================================================
 
-# GitHub OAuth (required for authentication)
-# Create an OAuth App at: https://github.com/settings/developers
-GITHUB_CLIENT_ID=your_github_client_id
-GITHUB_CLIENT_SECRET=your_github_client_secret
+# =============================================================================
+# Authentication
+# =============================================================================
 
-# JWT Secret (generate a random string: openssl rand -hex 32)
-JWT_SECRET=your_random_jwt_secret_here
+# RECOMMENDED: Deploy behind Cloudflare Zero Trust and set AUTH_ENABLED=false
+# Cloudflare handles authentication at the edge - simpler and more secure!
+# See: https://developers.cloudflare.com/cloudflare-one/applications/configure-apps/
+AUTH_ENABLED=false
 
-# Base URL (the public URL where your app is hosted)
-AUTH_BASE_URL=https://your-domain.com
-
-# Authentication (set to false to disable auth - not recommended for public deployments)
-AUTH_ENABLED=true
+# Alternative: Enable GitHub OAuth with username whitelist
+# If you can't use Cloudflare Zero Trust, uncomment and configure below:
+# AUTH_ENABLED=true
+# GITHUB_CLIENT_ID=your_github_client_id
+# GITHUB_CLIENT_SECRET=your_github_client_secret
+# GITHUB_ALLOWED_USERS=your-github-username,other-allowed-username
+# AUTH_BASE_URL=https://your-domain.com
+# AUTH_SECURE_COOKIE=true
 
 # =============================================================================
 # Cloudflare (optional - for tunnel management)
@@ -29,10 +33,3 @@ CLOUDFLARE_ACCOUNT_ID=your_cloudflare_account_id
 
 # Cloudflare Tunnel Token (for the selfhostly tunnel itself)
 TUNNEL_TOKEN=your_tunnel_token
-
-# =============================================================================
-# Docker Image (for docker-compose.prod.yml)
-# =============================================================================
-
-# Your GitHub repository (e.g., username/selfhostly)
-GITHUB_REPOSITORY=your-username/selfhostly
