replace cgo-based sqlite with modernc alternative

--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -3,7 +3,7 @@ name: Build and Publish
 on:
   push:
     branches: [main, master]
-    tags: ['v*']
+    tags: ["v*"]
   pull_request:
     branches: [main, master]
   workflow_dispatch:
@@ -56,7 +56,6 @@ jobs:
           context: .
           file: ./Dockerfile.unified
           # Only arm64 for Raspberry Pi (remove linux/amd64 if you don't need x86)
-          # Building arm64 with CGO on amd64 is slow (~10-20 min) due to QEMU
           platforms: linux/arm64
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
