--- a/env.example
+++ b/env.example
@@ -4,6 +4,19 @@
 # =============================================================================
 
 # =============================================================================
+# Application Environment
+# =============================================================================
+
+# Environment: development, staging, production (default: production)
+# Controls debug mode, logging verbosity, and availability of debug endpoints
+APP_ENV=production
+
+# Server configuration
+# SERVER_ADDRESS=:8080
+# DATABASE_PATH=./data/selfhostly.db
+# APPS_DIR=./apps
+
+# =============================================================================
 # Authentication
 # =============================================================================
 
@@ -15,6 +28,7 @@ AUTH_ENABLED=false
 # Alternative: Enable GitHub OAuth with username whitelist
 # If you can't use Cloudflare Zero Trust, uncomment and configure below:
 # AUTH_ENABLED=true
+# JWT_SECRET=your-strong-random-secret-at-least-32-characters-long
 # GITHUB_CLIENT_ID=your_github_client_id
 # GITHUB_CLIENT_SECRET=your_github_client_secret
 # GITHUB_ALLOWED_USERS=your-github-username,other-allowed-username
