multi-node support

--- a/env.example
+++ b/env.example
@@ -36,13 +36,39 @@ AUTH_ENABLED=false
 # AUTH_SECURE_COOKIE=true
 
 # =============================================================================
+# Multi-Node Configuration (optional - for distributed deployments)
+# =============================================================================
+
+# Node Identity (auto-generated if not set)
+# NODE_ID=auto
+# NODE_NAME=primary  # Defaults to hostname if not set
+
+# Primary vs Secondary Node
+# Set to false ONLY on secondary nodes
+NODE_IS_PRIMARY=true
+
+# API Key for this node (auto-generated if not set)
+# Other nodes use this key to authenticate with this node
+# NODE_API_KEY=auto-generated-secure-key
+
+# For Secondary Nodes ONLY:
+# URL of the primary node (leave empty for primary node)
+# PRIMARY_NODE_URL=http://192.168.1.10:8080
+# PRIMARY_NODE_API_KEY=<api-key-from-primary>
+
+# NOTE: Secondary nodes sync Cloudflare credentials from primary automatically
+# Do NOT set CLOUDFLARE_* variables on secondary nodes
+
+# =============================================================================
 # Cloudflare (optional - for tunnel management)
 # =============================================================================
 
 # Cloudflare API Token (needs Zone:DNS:Edit and Account:Cloudflare Tunnel:Edit)
+# PRIMARY NODE ONLY - Secondary nodes sync this automatically
 CLOUDFLARE_API_TOKEN=your_cloudflare_api_token
 
 # Cloudflare Account ID (find in Cloudflare dashboard)
+# PRIMARY NODE ONLY - Secondary nodes sync this automatically
 CLOUDFLARE_ACCOUNT_ID=your_cloudflare_account_id
 
 # Cloudflare Tunnel Token (for the selfhostly tunnel itself)
