--- a/env.example
+++ b/env.example
@@ -32,7 +32,7 @@ AUTH_ENABLED=false
 # GITHUB_CLIENT_ID=your_github_client_id
 # GITHUB_CLIENT_SECRET=your_github_client_secret
 # GITHUB_ALLOWED_USERS=your-github-username,other-allowed-username
-# AUTH_BASE_URL=https://your-domain.com
+# NODE_API_ENDPOINT=https://your-domain.com  # REQUIRED for multi-node: This node's reachable URL
 # AUTH_SECURE_COOKIE=true
 
 # =============================================================================
@@ -47,14 +47,37 @@ AUTH_ENABLED=false
 # Set to false ONLY on secondary nodes
 NODE_IS_PRIMARY=true
 
-# API Key for this node (auto-generated if not set)
-# Other nodes use this key to authenticate with this node
-# NODE_API_KEY=auto-generated-secure-key
+# Node API Endpoint (for inter-node communication)
+# Set this to the reachable URL for this node so other nodes can communicate
+# Examples: http://192.168.1.10:8080 or https://node1.example.com
+# NODE_API_ENDPOINT=http://192.168.1.10:8080
+
+# -----------------------------------------------------------------------------
+# API Key Authentication
+# -----------------------------------------------------------------------------
+
+# NODE_API_KEY: This node's own API key
+# - Used by OTHER nodes to authenticate when calling THIS node
+# - Used by THIS node when sending heartbeats to the primary
+# - MUST match the API key entered when registering this node on the primary
+# 
+# IMPORTANT: Set this explicitly to avoid generating a new key on each restart
+# Generate a secure key: openssl rand -base64 32
+# NODE_API_KEY=your-generated-secure-api-key-here
+#
+# Example Setup:
+#   1. Generate key: openssl rand -base64 32  → "abc123xyz..."
+#   2. Set NODE_API_KEY=abc123xyz... on secondary node's .env
+#   3. Register node on primary UI with the SAME API key: abc123xyz...
+#   4. Secondary sends heartbeat with this key for authentication ✅
 
 # For Secondary Nodes ONLY:
 # URL of the primary node (leave empty for primary node)
 # PRIMARY_NODE_URL=http://192.168.1.10:8080
-# PRIMARY_NODE_API_KEY=<api-key-from-primary>
+
+# NOTE: PRIMARY_NODE_API_KEY is currently unused - reserved for future features
+# For now, secondary nodes use their own NODE_API_KEY to authenticate to primary
+# PRIMARY_NODE_API_KEY=<reserved-for-future-use>
 
 # NOTE: Secondary nodes sync Cloudflare credentials from primary automatically
 # Do NOT set CLOUDFLARE_* variables on secondary nodes
