multi-node auto-registration

--- a/env.example
+++ b/env.example
@@ -53,6 +53,23 @@ NODE_IS_PRIMARY=true
 # NODE_API_ENDPOINT=http://192.168.1.10:8080
 
 # -----------------------------------------------------------------------------
+# Cluster Registration Token (for auto-registration)
+# -----------------------------------------------------------------------------
+
+# REGISTRATION_TOKEN: Shared secret for auto-registering secondary nodes
+# - Primary node: Generate with `openssl rand -base64 32` and set in .env
+# - Secondary nodes: Copy the SAME token from primary to enable auto-registration
+# - If not set on secondary, manual registration through UI is required
+# - Auto-generated on primary if not provided (check startup logs)
+# 
+# REGISTRATION_TOKEN=your-secure-registration-token-here
+#
+# Example workflow:
+#   1. Set REGISTRATION_TOKEN on primary and start it
+#   2. Copy the same token to secondary nodes
+#   3. Start secondary - it auto-registers! ✅
+
+# -----------------------------------------------------------------------------
 # API Key Authentication
 # -----------------------------------------------------------------------------
 
