--- a/env.example
+++ b/env.example
@@ -99,6 +99,25 @@ NODE_IS_PRIMARY=true
 # NOTE: Secondary nodes sync Cloudflare credentials from primary automatically
 # Do NOT set CLOUDFLARE_* variables on secondary nodes
 
+# -----------------------------------------------------------------------------
+# API Gateway (optional - for scalable multi-node routing)
+# -----------------------------------------------------------------------------
+#
+# When using the API gateway (cmd/gateway), set the SAME GATEWAY_API_KEY on:
+# - The gateway binary (required)
+# - Every backend node (primary and secondaries) so they accept gateway-forwarded requests
+#
+# Gateway env (run gateway with):
+#   GATEWAY_API_KEY=your-gateway-secret  # Required; same value on all backends
+#   PRIMARY_BACKEND_URL=http://primary:8082  # Primary backend URL for node registry
+#   GATEWAY_LISTEN_ADDRESS=:8080
+#   GATEWAY_REGISTRY_TTL_SEC=60  # How often to refresh node list (default 60)
+#   AUTH_ENABLED=true  # If gateway should validate JWT
+#   JWT_SECRET=...     # Same as primary (for JWT validation)
+#
+# Backend env (primary and secondaries when gateway is in front):
+#   GATEWAY_API_KEY=your-gateway-secret  # Must match gateway's GATEWAY_API_KEY
+
 # =============================================================================
 # Cloudflare (optional - for tunnel management)
 # =============================================================================
