--- a/Dockerfile.backend
+++ b/Dockerfile.backend
@@ -1,48 +1,31 @@
 # =============================================================================
-# Selfhostly - Unified Build (Frontend + Backend)
+# Selfhostly Backend - Secondary Node (No Frontend)
 # =============================================================================
 
-# Stage 1: Build Frontend
-FROM node:20-alpine AS frontend-builder
-
-WORKDIR /app/web
-
-# Copy package files
-COPY web/package*.json ./
-
-# Install dependencies
-RUN npm ci --silent
-
-# Copy source and build
-COPY web/ ./
-RUN npm run build
-
-# Stage 2: Build Backend
-FROM golang:1.24-alpine AS backend-builder
+# Build Stage
+FROM golang:1.24-alpine AS builder
 
 WORKDIR /app
 
-# Copy go mod files
+# Copy go mod files first (cached unless dependencies change)
 COPY go.mod go.sum ./
 
-# Download dependencies
+# Download dependencies (cached layer)
 RUN go mod download
 
-# Copy source code
-COPY . .
+# Copy only necessary source files (respects .dockerignore)
+COPY cmd/ ./cmd/
+COPY internal/ ./internal/
 
-# Copy frontend build from previous stage
-COPY --from=frontend-builder /app/web/dist ./web/dist
-
-# Build the application (no CGO needed with modernc.org/sqlite)
+# Build backend binary (no CGO needed with modernc.org/sqlite)
 ARG TARGETARCH
 RUN CGO_ENABLED=0 GOOS=linux GOARCH=${TARGETARCH} go build -o selfhostly cmd/server/main.go
 
-# Stage 3: Production Image
+# Production Stage
 FROM alpine:latest
 
 # Install runtime dependencies (including Docker CLI and Compose plugin)
-RUN apk add --no-cache ca-certificates tzdata docker-cli docker-cli-compose
+RUN apk add --no-cache ca-certificates tzdata docker-cli docker-cli-compose wget
 
 # Create non-root user with fixed UID/GID (1000) for predictable permissions
 # Add to docker group for socket access
@@ -64,11 +47,8 @@ RUN set -ex; \
 
 WORKDIR /app
 
-# Copy binary from builder
-COPY --from=backend-builder /app/selfhostly .
-
-# Copy frontend dist
-COPY --from=backend-builder /app/web/dist ./web/dist
+# Copy backend binary from builder
+COPY --from=builder /app/selfhostly .
 
 # Create directories with proper permissions
 RUN mkdir -p /app/data /app/apps && \
@@ -77,12 +57,9 @@ RUN mkdir -p /app/data /app/apps && \
 # Switch to non-root user
 USER selfhostly
 
-# Expose port
-EXPOSE 8080
-
 # Health check
 HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
-    CMD wget --no-verbose --tries=1 --spider http://localhost:8080/api/health || exit 1
+    CMD wget --no-verbose --tries=1 --spider http://localhost:8082/api/health || exit 1
 
-# Run the application
+# Run the backend
 CMD ["./selfhostly"]
