--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -1,4 +1,4 @@
-name: Build and Publish
+name: Build and Publish (Fast - Pi Only)
 
 on:
   push:
@@ -13,9 +13,44 @@ env:
   IMAGE_OWNER: ${{ github.repository_owner }}
 
 jobs:
+  # Additional speed optimization: Skip builds for docs-only changes
+  check-changes:
+    name: Check for Code Changes
+    runs-on: ubuntu-latest
+    outputs:
+      gateway: ${{ steps.filter.outputs.gateway }}
+      primary: ${{ steps.filter.outputs.primary }}
+      backend: ${{ steps.filter.outputs.backend }}
+    steps:
+      - uses: actions/checkout@v4
+      - uses: dorny/paths-filter@v3
+        id: filter
+        with:
+          filters: |
+            gateway:
+              - 'cmd/gateway/**'
+              - 'internal/gateway/**'
+              - 'Dockerfile.gateway'
+              - 'go.mod'
+              - 'go.sum'
+            primary:
+              - 'cmd/server/**'
+              - 'internal/**'
+              - 'Dockerfile.primary'
+              - 'go.mod'
+              - 'go.sum'
+            backend:
+              - 'cmd/server/**'
+              - 'internal/**'
+              - 'Dockerfile.backend'
+              - 'go.mod'
+              - 'go.sum'
+
   build-gateway:
     name: Build Gateway Image
     runs-on: ubuntu-latest
+    needs: check-changes
+    if: needs.check-changes.outputs.gateway == 'true' || github.event_name == 'workflow_dispatch'
     permissions:
       contents: read
       packages: write
@@ -56,16 +91,21 @@ jobs:
         with:
           context: .
           file: ./Dockerfile.gateway
-          platforms: linux/amd64,linux/arm64
+          platforms: linux/arm64
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha,scope=gateway
           cache-to: type=gha,mode=max,scope=gateway
+          # Additional optimizations
+          build-args: |
+            BUILDKIT_INLINE_CACHE=1
 
   build-primary:
     name: Build Primary Image
     runs-on: ubuntu-latest
+    needs: check-changes
+    if: needs.check-changes.outputs.primary == 'true' || github.event_name == 'workflow_dispatch'
     permissions:
       contents: read
       packages: write
@@ -106,16 +146,20 @@ jobs:
         with:
           context: .
           file: ./Dockerfile.primary
-          platforms: linux/amd64,linux/arm64
+          platforms: linux/arm64
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha,scope=primary
           cache-to: type=gha,mode=max,scope=primary
+          build-args: |
+            BUILDKIT_INLINE_CACHE=1
 
   build-backend:
     name: Build Backend Image
     runs-on: ubuntu-latest
+    needs: check-changes
+    if: needs.check-changes.outputs.backend == 'true' || github.event_name == 'workflow_dispatch'
     permissions:
       contents: read
       packages: write
@@ -156,9 +200,11 @@ jobs:
         with:
           context: .
           file: ./Dockerfile.backend
-          platforms: linux/amd64,linux/arm64
+          platforms: linux/arm64
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha,scope=backend
           cache-to: type=gha,mode=max,scope=backend
+          build-args: |
+            BUILDKIT_INLINE_CACHE=1
