--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,10 +1,14 @@
 # Development Dockerfile with live reload using air
-FROM golang:1.21-alpine
+FROM golang:1.24-alpine
 
 WORKDIR /app
 
+# Install Docker CLI and Docker Compose plugin
+RUN apk add --no-cache docker-cli docker-cli-compose
+
 # Install air for live reload
-RUN go install github.com/air-verse/air@latest
+# Pinning to v1.52.3 which supports Go 1.24
+RUN go install github.com/air-verse/air@v1.52.3
 
 # Copy go mod files
 COPY go.mod go.sum ./
@@ -12,8 +16,54 @@ COPY go.mod go.sum ./
 # Download dependencies
 RUN go mod download
 
-# Copy air configuration
-COPY .air.toml ./
+# Create air configuration directly in the container
+# This avoids issues with .dockerignore excluding .air.toml
+RUN cat > .air.toml << 'EOF'
+root = "."
+testdata_dir = "testdata"
+tmp_dir = "tmp"
+
+[build]
+  args_bin = []
+  bin = "./tmp/main"
+  cmd = "go build -o ./tmp/main ./cmd/server/main.go"
+  delay = 1000
+  exclude_dir = ["assets", "tmp", "vendor", "testdata", "web", "node_modules", "data", "apps"]
+  exclude_file = []
+  exclude_regex = ["_test.go"]
+  exclude_unchanged = false
+  follow_symlink = false
+  full_bin = ""
+  include_dir = []
+  include_ext = ["go", "tpl", "tmpl", "html"]
+  include_file = []
+  kill_delay = "0s"
+  log = "build-errors.log"
+  poll = false
+  poll_interval = 0
+  rerun = false
+  rerun_delay = 500
+  send_interrupt = false
+  stop_on_error = false
+
+[color]
+  app = ""
+  build = "yellow"
+  main = "magenta"
+  runner = "green"
+  watcher = "cyan"
+
+[log]
+  main_only = false
+  time = false
+
+[misc]
+  clean_on_exit = false
+
+[screen]
+  clear_on_rebuild = false
+  keep_scroll = true
+EOF
 
 # Run air for live reload
 CMD ["air", "-c", ".air.toml"]
