--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,4 +1,3 @@
-version: "3.8"
 services:
   backend:
     build:
@@ -8,17 +7,22 @@ services:
     ports:
       - "8080:8080"
     environment:
-      DATABASE_PATH: ./data/selfhostly.db
-      APPS_DIR: ./apps
-      CLOUDFLARE_API_TOKEN: ${CLOUDFLARE_API_TOKEN}
-      CLOUDFLARE_ACCOUNT_ID: ${CLOUDFLARE_ACCOUNT_ID}
+      SERVER_ADDRESS: ":8080"
+      DATABASE_PATH: /app/data/selfhostly.db
+      APPS_DIR: /app/apps
+      CLOUDFLARE_API_TOKEN: ${CLOUDFLARE_API_TOKEN:-}
+      CLOUDFLARE_ACCOUNT_ID: ${CLOUDFLARE_ACCOUNT_ID:-}
       AUTH_ENABLED: ${AUTH_ENABLED:-false}
+      # Development settings
+      GIN_MODE: debug
     volumes:
-      # Mount source code for live reload
+      # Mount source code for live reload (Air will watch these files)
       - .:/app
       # Mount data directories
       - ./data:/app/data
       - ./apps:/app/apps
+      # Mount Docker socket for container management
+      - /var/run/docker.sock:/var/run/docker.sock
       # Exclude tmp directory from host
       - /app/tmp
     networks:
@@ -28,15 +32,17 @@ services:
   frontend:
     build:
       context: ./web
-      dockerfile: Dockerfile.pi
+      dockerfile: Dockerfile.dev
     container_name: selfhostly-frontend-dev
     ports:
       - "3000:3000"
     environment:
-      REACT_APP_API_URL: http://localhost:8080
+      # Vite will proxy /api and /auth requests to the backend container
+      VITE_API_BASE: http://backend:8080
     volumes:
-      # Mount web source for live reload (if using vite/react dev server)
+      # Mount web source for live reload
       - ./web:/app
+      # Prevent overwriting node_modules from host
       - /app/node_modules
     networks:
       - selfhostly-network
@@ -44,18 +50,8 @@ services:
       - backend
     restart: unless-stopped
 
-  cloudflared:
-    image: cloudflare/cloudflared:latest-arm64
-    container_name: selfhostly-cloudflared-dev
-    command: tunnel run
-    environment:
-      TUNNEL_TOKEN: ${TUNNEL_TOKEN}
-    networks:
-      - selfhostly-network
-    restart: unless-stopped
-    depends_on:
-      - backend
-
 networks:
+  # Core API network - must match constants.CoreAPINetwork in internal/constants/constants.go
   selfhostly-network:
+    name: selfhostly-network # Use exact name, no project prefix
     driver: bridge
