--- a/web/package.json
+++ b/web/package.json
@@ -10,6 +10,12 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
   },
   "dependencies": {
+    "@codemirror/commands": "^6.10.2",
+    "@codemirror/lang-yaml": "^6.1.2",
+    "@codemirror/search": "^6.6.0",
+    "@codemirror/state": "^6.5.4",
+    "@codemirror/theme-one-dark": "^6.1.3",
+    "@codemirror/view": "^6.39.13",
     "@monaco-editor/react": "^4.6.0",
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dialog": "^1.1.15",
@@ -18,12 +24,16 @@
     "@tanstack/react-query": "^5.17.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "codemirror": "^6.0.2",
+    "diff": "^5.2.2",
     "lucide-react": "^0.303.0",
     "react": "^18.2.0",
+    "react-diff-viewer-continued": "^3.4.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.21.0",
     "tailwind-merge": "^2.2.0",
+    "yaml": "^2.8.2",
     "zod": "^3.22.4",
     "zustand": "^4.4.7"
   },
